--- a/Unit15/scss/_large.scss
+++ b/Unit15/scss/_large.scss
@@ -31,16 +31,13 @@ footer,
         grid-auto-columns: minmax(300px, 33%);
 }
 
+
 #graphGrid4 button{
     font-size: 1.2rem;
     border-radius: 30px;
     padding: .2rem 13%;
   }
 
-
-
-
-
-// #graphs img{
-//     contain: unset;
-// }
+#blackBar{
+    margin-top: .7rem;
+}
