--- a/Unit15/scss/_medium.scss
+++ b/Unit15/scss/_medium.scss
@@ -54,6 +54,7 @@ nav li{
   color: white;
   display: flex;
   justify-content: space-between;
+  margin-top: 1rem;
   
 }
 
