--- a/Unit15/scss/_small.scss
+++ b/Unit15/scss/_small.scss
@@ -105,6 +105,7 @@ nav{
 #blackBar{
     color: white;
     padding: 1rem 2%;
+    margin-top: .7rem;
     // display: flex;
     // justify-content: space-between;
     // font-size: 50%;
